--- a/Client/config.py.dist
+++ b/Client/config.py.dist
@@ -7,6 +7,9 @@ device_pass = ""
 relay_pin = 12
 led_pin = 13
 
+# OTA parameters
+GITHUB_URL = "https://github.com/RangerDigital/senko/blob/master/examples/"
+
 # Wifi SSID and Password
 wifi_ssid = ''
 wifi_pass = ''
