--- a/Client/config.py.dist
+++ b/Client/config.py.dist
@@ -8,7 +8,9 @@ relay_pin = 12
 led_pin = 13
 
 # OTA parameters
-GITHUB_URL = "https://github.com/RangerDigital/senko/blob/master/examples/"
+GITHUB_USER = "icheered"
+GITHUB_REPO = "SlothIOT"
+GITHUB_DIR = "Client"
 
 # Wifi SSID and Password
 wifi_ssid = ''
