--- a/Client/config.py.dist
+++ b/Client/config.py.dist
@@ -4,8 +4,13 @@ client_id = ""
 client_pass = ""
 
 # Device parameters
+### Switch
 relay_pin = 12
 led_pin = 13
+
+### AM2320
+scl_pin = 5
+sda_pin = 0
 
 # OTA parameters
 GITHUB_USER = "icheered"
